# retail-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: retail_pipeline.py
docs/: project_plan.md
infra/terraform/: athena.tf  glue.tf  iam.tf  outputs.tf  providers.tf  s3.tf  variables.tf
infra/terraform/environments/: dev.tfvars
scripts/: creates.sql  glue_transform.py  ingest.py
src/: run_pipeline.py
src/config/: settings.py
src/dashboard/: app.py  queries.py
src/pipeline/: __init__.py  data_pipeline.py  transform.py
src/tools/: eda_analysis.py
tests/: __init__.py  test_pipeline.py  test_transform.py
